# book-scraping

./: README.md  scraper-notes.md
app/: .env.example  docker-compose.yml  mongo-init.sh
app/backend/: Dockerfile  database.py  main.py  pyproject.toml
app/backend/html/: get_data.html  scrape_data.html
app/backend/routes/: scraper.py
app/backend/schemas/: scrapers.py
app/scraper/: Dockerfile  pyproject.toml  scrapy.cfg
app/scraper/scraper/: items.py  middlewares.py  pipelines.py  settings.py
app/scraper/scraper/spiders/: kitapsepeti.py  kitapyurdu.py
