[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Scraper backend"
authors = ["Oktay Ozkan <oktay.ozkan.au@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
fastapi-pagination = "^0.12.5"
pymongo = "^4.4.1"
uvicorn = "^0.22.0"
requests = "^2.31.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
