[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "This project aims to scrape data from some book sites."
authors = ["Oktay Ozkan <oktay.ozkan.au@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
scrapyd = "^1.4.2"
scrapyd-client = "^1.2.3"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
